First module compilation.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
     "cSpell.words": [
+        "endcase",
+        "endfunction",
         "endmodule",
+        "endprimitive",
+        "endtable",
+        "endtask",
+        "localparam",
         "negedge",
         "posedge",
         "Synthesizable",
