Fix namespaces. Command line transpiler.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,11 +10,11 @@
             "request": "launch",
             "module": "GateForge",
             "justMyCode": true,
-            "cwd": "${workspaceFolder}/workspace",
+            "cwd": "${workspaceFolder}",
             "env": {
-                "PYTHONPATH": "${workspaceFolder}/src"
+                "PYTHONPATH": "${workspaceFolder}/src:${workspaceFolder}/test",
             },
-            "args": []
+            "args": ["sample_module:ShifterModule"]
         },
         {
             "name": "Unit tests",
