OSS CAD suite in project env.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,8 @@
         "Verilog",
         "wireable",
         "xnor"
-    ]
+    ],
+    "env": {
+        "ossCadSuiteDir": "/opt/oss-cad-suite"
+    }
 }
