--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,24 @@
 {
     "cSpell.words": [
         "bassign",
+        "CFLAGS",
         "endcase",
         "endfunction",
         "endmodule",
         "endprimitive",
         "endtable",
         "endtask",
+        "LDFLAGS",
         "localparam",
         "nand",
         "negedge",
         "posedge",
         "Synthesizable",
+        "ulonglong",
         "Unwired",
+        "Verilate",
+        "verilation",
+        "Verilator",
         "Verilog",
         "wireable",
         "xnor"
