Add "default nettype none".

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "localparam",
         "nand",
         "negedge",
+        "nettype",
         "posedge",
         "Synthesizable",
         "ulonglong",
