Package rename (lowercase).

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "endprimitive",
         "endtable",
         "endtask",
+        "gateforge",
         "LDFLAGS",
         "localparam",
         "nand",
