--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,8 @@
     ],
     "env": {
         "ossCadSuiteDir": "/opt/oss-cad-suite"
+    },
+    "python.analysis.diagnosticSeverityOverrides": {
+        "reportInvalidTypeForm": "none"
     }
 }
