--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -32,7 +32,7 @@
         {
             "label": "Run single unit test",
             "command": "${workspaceFolder}/.venv/bin/python",
-            "args": ["-m", "unittest", "test.test_expressions.Const.test_basic"],
+            "args": ["-m", "unittest", "test.test_concepts.TestConstructNets"],
             "options": {
                 "cwd": "${workspaceFolder}",
                 "env": {
