casez and casex implemented.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
         "bassign",
+        "casex",
+        "casez",
         "CFLAGS",
         "endcase",
         "endfunction",
@@ -22,6 +24,8 @@
         "verilation",
         "Verilator",
         "Verilog",
+        "whenx",
+        "whenz",
         "wireable",
         "xnor"
     ],
