--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,7 +27,8 @@
         "whenx",
         "whenz",
         "wireable",
-        "xnor"
+        "xnor",
+        "Yosys"
     ],
     "env": {
         "ossCadSuiteDir": "/opt/oss-cad-suite"
